--- a/PsuAccSystem/PsuAccSystem.csproj
+++ b/PsuAccSystem/PsuAccSystem.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="PropertyChanged.Fody" Version="3.3.3" />
+    <PackageReference Include="WPFTextBoxAutoComplete" Version="1.0.5" />
   </ItemGroup>
 
 </Project>
